--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 TWITTER_CLIENT_ID=
 TWITTER_CLIENT_SECRET=
+GOOGLE_CLOUD_STORAGE_PROJECT_ID=
+GOOGLE_CLOUD_STORAGE_BUCKET_NAME=
+GOOGLE_CLOUD_STORAGE_STORAGE_PATH=
+GOOGLE_CLOUD_STORAGE_CREDENTIALS_FILE=
