fix: missing env GOOGLE_CLIENT_CALLBACK_URL

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ GITHUB_CLIENT_SECRET=
 GITHUB_CLIENT_CALLBACK_URL=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_CALLBACK_URL=
 TWITTER_CLIENT_ID=
 TWITTER_CLIENT_SECRET=
 GOOGLE_CLOUD_STORAGE_PROJECT_ID=
