fix: Dockerfile, feat: setup env for cloud run deployment

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_URL=
 DRIVE_NAME=
 DRIVE_ROOT=
 TZ=UTC
-PORT=3333
+PORT=
 HOST=localhost
 LOG_LEVEL=info
 APP_KEY=QXVQpmy4pkjcsqE75CpXpvzUJVJgPxak
