--- a/.dockerignore
+++ b/.dockerignore
@@ -44,6 +44,7 @@ tmp
 .env.local
 .env.production.local
 .env.development.local
+.env.yaml
 
 # Frontend assets compiled code
 public/assets
@@ -69,3 +70,4 @@ syncRepo.bat
 
 # Cloud Storage Account Key
 cloud-storage-key.json
+singa-prod-sa-key.json
