--- a/.env.yaml.example
+++ b/.env.yaml.example
@@ -25,3 +25,7 @@ GOOGLE_CLOUD_STORAGE_PROJECT_ID:
 GOOGLE_CLOUD_STORAGE_BUCKET_NAME: 
 GOOGLE_CLOUD_STORAGE_STORAGE_PATH: 
 GOOGLE_CLOUD_STORAGE_CREDENTIALS_FILE: 
+STATIC_STORAGE_PATH: static-translation
+STATIC_QUOTA: '10485760' # in bytes (10MB)
+CONVERSATION_STORAGE_PATH: conversation-translation
+CONVERSATION_QUOTA: '5242880' # in bytes (5MB)
