feat: add articles endpoint and to seeder

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ HOST=localhost
 LOG_LEVEL=info
 APP_KEY=
 NODE_ENV=development
+ADMINS=1 # comma separated list of user ids
 
 # APP
 DRIVE_ROOT=./uploads
