--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "dependencies": {
     "@adonisjs/ally": "^5.0.2",
     "@adonisjs/auth": "^9.2.1",
+    "@adonisjs/bouncer": "^3.1.3",
     "@adonisjs/core": "^6.9.0",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^20.6.0",
@@ -74,8 +75,8 @@
     "luxon": "^3.4.4",
     "nanoid": "^5.0.7",
     "pg": "^8.11.5",
-    "reflect-metadata": "^0.2.2",
     "pino-pretty": "^11.0.0",
+    "reflect-metadata": "^0.2.2",
     "tmp-promise": "^3.0.3"
   },
   "hotHook": {
