--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,6 @@ TWITTER_CLIENT_SECRET=
 GOOGLE_CLOUD_STORAGE_PROJECT_ID=
 GOOGLE_CLOUD_STORAGE_BUCKET_NAME=
 GOOGLE_CLOUD_STORAGE_STORAGE_PATH=
+
+# SINGA PREDICT API
+PREDICT_API_HOST=
