--- a/.env.yaml.example
+++ b/.env.yaml.example
@@ -4,6 +4,7 @@ HOST:
 LOG_LEVEL: info
 APP_KEY: QXVQpmy4pkjcsqE75CpXpvzUJVJgPxak
 NODE_ENV: development
+ADMINS: '1' # comma separated list of user ids
 
 # APP
 DRIVE_ROOT: 
@@ -15,11 +16,7 @@ CONVERSATION_STORAGE_PATH:
 CONVERSATION_QUOTA: 
 
 # DATABASE
-DB_HOST: 
-DB_PORT: 
-DB_USER: 
-DB_PASSWORD: 
-DB_DATABASE: 
+# Must be set through secrets manager
 
 # SOCIAL AUTHENTICATION (ALLY)
 FACEBOOK_CLIENT_ID: 
@@ -37,3 +34,6 @@ TWITTER_CLIENT_SECRET:
 GOOGLE_CLOUD_STORAGE_PROJECT_ID: 
 GOOGLE_CLOUD_STORAGE_BUCKET_NAME: 
 GOOGLE_CLOUD_STORAGE_STORAGE_PATH: 
+
+# SINGA PREDICT API
+PREDICT_API_HOST:
