```text feat: Add axios npm dependency and update PREDICT_API_HOST variable in env.ts
This commit adds the "axios" npm dependency with version "^1.7.2" to the project's package.json file. Additionally, it updates the PREDICT_API_HOST variable in the env.ts file to remove the format constraint of "host". This change allows for more flexibility in configuring the predict API host.

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@techstark/opencv-js": "^4.9.0-release.3",
     "@tensorflow/tfjs-node": "^4.19.0",
     "@vinejs/vine": "^2.0.0",
+    "axios": "^1.7.2",
     "fluent-ffmpeg": "^2.1.2",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
