feat: differentiate between guest and user quota

--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,9 @@ DRIVE_ROOT=./uploads
 DRIVE_NAME=uploads
 APP_URL=http://${HOST}:${PORT}
 STATIC_STORAGE_PATH=static-translation
-STATIC_QUOTA=10485760 # in bytes (10MB)
 CONVERSATION_STORAGE_PATH=conversation-translation
-CONVERSATION_QUOTA=5242880 # in bytes (5MB)
+GUEST_QUOTA=104857600 # in bytes (100MB)
+USER_QUOTA=1073741824 # in bytes (1024MB/1GB)
 
 # DATABASE
 DB_HOST=127.0.0.1
