fix: env example, ignore node_modules

--- a/.env.yaml.example
+++ b/.env.yaml.example
@@ -7,13 +7,14 @@ NODE_ENV: development
 ADMINS: '1' # comma separated list of user ids
 
 # APP
-DRIVE_ROOT: 
-DRIVE_NAME: 
+DRIVE_ROOT: ./uploads
+DRIVE_NAME: uploads
 APP_URL: http://${HOST}:${PORT}
-STATIC_STORAGE_PATH: 
-STATIC_QUOTA: 
-CONVERSATION_STORAGE_PATH: 
-CONVERSATION_QUOTA: 
+STATIC_STORAGE_PATH: static-translation
+STATIC_QUOTA: '10485760' # in bytes (10MB)
+CONVERSATION_STORAGE_PATH: conversation-translation
+GUEST_QUOTA: '104857600' # in bytes (100MB)
+USER_QUOTA: '1073741824' # in bytes (1024MB/1GB)
 
 # DATABASE
 # Must be set through secrets manager
