feat: rate limiting

--- a/.env.yaml.example
+++ b/.env.yaml.example
@@ -5,6 +5,7 @@ LOG_LEVEL: info
 APP_KEY: QXVQpmy4pkjcsqE75CpXpvzUJVJgPxak
 NODE_ENV: development
 ADMINS: '1' # comma separated list of user ids
+LIMITER_STORE: database
 
 # APP
 DRIVE_ROOT: ./uploads
