--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ LOG_LEVEL=info
 APP_KEY=
 NODE_ENV=development
 ADMINS=1 # comma separated list of user ids
+LIMITER_STORE=database
 
 # APP
 DRIVE_ROOT=./uploads
