--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@adonisjs/bouncer": "^3.1.3",
     "@adonisjs/core": "^6.10.1",
     "@adonisjs/cors": "^2.2.1",
+    "@adonisjs/limiter": "^2.3.0",
     "@adonisjs/lucid": "^20.6.0",
     "@google-cloud/storage": "^7.11.2",
     "@rlanz/bull-queue": "^3.0.0",
