--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     "@google-cloud/storage": "^7.11.2",
     "@rlanz/bull-queue": "^3.0.0",
     "@vinejs/vine": "^2.1.0",
+    "argon2": "^0.40.3",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
