--- a/.env.yaml.example
+++ b/.env.yaml.example
@@ -2,7 +2,7 @@
 TZ: UTC
 HOST: 
 LOG_LEVEL: info
-APP_KEY: QXVQpmy4pkjcsqE75CpXpvzUJVJgPxak
+APP_KEY:
 NODE_ENV: development
 ADMINS: '1' # comma separated list of user ids
 LIMITER_STORE: database
