fix: build steps

--- a/.env.yaml.example
+++ b/.env.yaml.example
@@ -19,6 +19,11 @@ USER_QUOTA: '1073741824' # in bytes (1024MB/1GB)
 
 # DATABASE
 # Must be set through secrets manager
+DB_HOST: 
+DB_PORT: 
+DB_USER: 
+DB_PASSWORD: 
+DB_DATABASE: 
 
 # SOCIAL AUTHENTICATION (ALLY)
 FACEBOOK_CLIENT_ID: 
@@ -36,6 +41,9 @@ TWITTER_CLIENT_SECRET:
 GOOGLE_CLOUD_STORAGE_PROJECT_ID: 
 GOOGLE_CLOUD_STORAGE_BUCKET_NAME: 
 GOOGLE_CLOUD_STORAGE_STORAGE_PATH: 
+QUEUE_REDIS_HOST: 
+QUEUE_REDIS_PORT: 
+QUEUE_REDIS_PASSWORD:
 
 # SINGA PREDICT API
 PREDICT_API_HOST:
