--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ APP_KEY=
 NODE_ENV=development
 ADMINS=1 # comma separated list of user ids
 LIMITER_STORE=database
+ADMIN_PASSWORD=test12345
 
 # APP
 DRIVE_ROOT=./uploads
