fix: cloudbuild steps

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -103,7 +103,7 @@ steps:
       ]
 
 # Configure build log
-logsBucket: gs://singalogbucket
+logsBucket: gs://$_LOGBUCKET_NAME
 serviceAccount: 'projects/$PROJECT_ID/serviceAccounts/$_SERVICE_ACCOUNT'
 
 # Substitution value
@@ -113,7 +113,8 @@ substitutions:
   _MIN_INSTANCES: '1'
   _DRIVE_ROOT: ./uploads
   _DRIVE_NAME: uploads
-  _SERVICE_ACCOUNT: some-sa
+  _SERVICE_ACCOUNT: your-sa-for-build
+  _LOGBUCKET_NAME: your-log-bucket-name
 
 options:
   logging: GCS_ONLY
