--- a/.env.yaml.example
+++ b/.env.yaml.example
@@ -6,6 +6,7 @@ APP_KEY:
 NODE_ENV: development
 ADMINS: '1' # comma separated list of user ids
 LIMITER_STORE: database
+ADMIN_PASSWORD: ''
 
 # APP
 DRIVE_ROOT: ./uploads
