--- a/compose.yaml
+++ b/compose.yaml
@@ -11,23 +11,26 @@ services:
   server:
     build:
       context: .
-    environment:
-      NODE_ENV: production
     ports:
       - 3333:3333
+    env_file:
+      - path: ./.env
+        required: true
+
+      
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
 # start the database before your application. The `db-data` volume persists the
 # database data between container restarts. The `db-password` secret is used
 # to set the database password. You must create `db/password.txt` and add
 # a password of your choosing to it before running `docker-compose up`.
-#     depends_on:
-#       db:
-#         condition: service_healthy
-#   db:
-#     image: postgres
-#     restart: always
-#     user: postgres
+  #   depends_on:
+  #     db:
+  #       condition: service_healthy
+  # db:
+  #   image: postgres
+  #   restart: always
+  #   user: postgres
 #     secrets:
 #       - db-password
 #     volumes:
